--- a/src/app/view/groups/groups.component.html
+++ b/src/app/view/groups/groups.component.html
@@ -120,7 +120,7 @@
                                             <span class="date">
                                                 08			<span>Jul</span>
                                             </span>
-                                            <h2 class="entry-title"><a itemprop="url" href="" title="Jenn Dodd Stars in “No Show: A One Woman Show”" rel="bookmark">Jenn Dodd Stars in “No Show: A One Woman Show”</a></h2>
+                                            <h2 class="entry-title"><a itemprop="name" href="" title="Jenn Dodd Stars in “No Show: A One Woman Show”" getCurrentOrderArr>Jenn Dodd Stars in “No Show: A One Woman Show”</a></h2>
                                             <div class="listing_rating">
                                                 <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
                                             </div>
@@ -128,7 +128,7 @@
                                         <!--end post type title -->
                                         <!-- Entry details start -->
                                         <div class="entry-details">
-                                            <p class="address" itemprop="address">214 W 30th St 6th Floor New York, NY 10001</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T20:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T22:00">Jul 8, 2019</span></span></p><p class="time"><span>8:00 pm To 10:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
+                                            <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">214 W 30th St 6th Floor New York, NY 10001</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T20:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T22:00">Jul 8, 2019</span></span></p><p class="time"><span>8:00 pm To 10:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
                                     </div>
 
                                     <!--Start Post Content -->
@@ -156,7 +156,7 @@
                                             <span class="date">
                                                 08			<span>Jul</span>
                                             </span>
-                                            <h2 class="entry-title"><a itemprop="url" href="" title="Robert Mealy Conducts Juilliard415" rel="bookmark">Robert Mealy Conducts Juilliard415</a></h2>
+                                            <h2 class="entry-title"><a itemprop="name" href="" title="Robert Mealy Conducts Juilliard415" getCurrentOrderArr>Robert Mealy Conducts Juilliard415</a></h2>
                                             <div class="listing_rating">
                                                 <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
                                             </div>
@@ -164,7 +164,7 @@
                                         <!--end post type title -->
                                         <!-- Entry details start -->
                                         <div class="entry-details">
-                                            <p class="address" itemprop="address">60 Lincoln Ctr Plz New York, NY 10023</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T15:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T17:00">Jul 8, 2019</span></span></p><p class="time"><span>3:00 pm To 5:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
+                                            <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">60 Lincoln Ctr Plz New York, NY 10023</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T15:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T17:00">Jul 8, 2019</span></span></p><p class="time"><span>3:00 pm To 5:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
                                     </div>
 
                                     <!--Start Post Content -->
@@ -192,7 +192,7 @@
                                             <span class="date">
                                                 08			<span>Jul</span>
                                             </span>
-                                            <h2 class="entry-title"><a itemprop="url" href="" title="Full Moon Drumming Workshop" rel="bookmark">Full Moon Drumming Workshop</a></h2>
+                                            <h2 class="entry-title"><a itemprop="name" href="" title="Full Moon Drumming Workshop" getCurrentOrderArr>Full Moon Drumming Workshop</a></h2>
                                             <div class="listing_rating">
                                                 <div class="directory_rating_row"><span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i> </span></div>
                                             </div>
@@ -200,7 +200,7 @@
                                         <!--end post type title -->
                                         <!-- Entry details start -->
                                         <div class="entry-details">
-                                            <p class="address" itemprop="address">13735 Northern Blvd Flushing, NY 11354</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T16:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T18:00">Jul 8, 2019</span></span></p><p class="time"><span>4:00 pm To 6:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
+                                            <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">13735 Northern Blvd Flushing, NY 11354</p><p class="event_date"><span><span itemprop="startDate" content="2014-07-08T16:00">Jul 8, 2014</span> To <span itemprop="endDate" content="2019-07-08T18:00">Jul 8, 2019</span></span></p><p class="time"><span>4:00 pm To 6:00 pm</span></p><!--googleoff: all--><p class="phone">+86 10 6538 5537</p><!--googleon: all-->									</div>
                                     </div>
 
                                     <!--Start Post Content -->
@@ -230,7 +230,7 @@
                                                     08			<span>Jul</span>
                                                 </span>
                                                 <h2 class="entry-title">
-                                                    <a itemprop="url" href="" title="Disaster! A 70’s Movie…Musical!" rel="bookmark">Disaster! A 70’s Movie…Musical!</a>
+                                                    <a itemprop="name" href="" title="Disaster! A 70’s Movie…Musical!" getCurrentOrderArr>Disaster! A 70’s Movie…Musical!</a>
                                                 </h2>
                                                 <div class="listing_rating">
                                                     <div class="directory_rating_row">
@@ -248,7 +248,7 @@
 
                                             <!-- Entry details start -->
                                             <div class="entry-details">
-                                                <p class="address" itemprop="address">308 West 46th Street New York, NY 10036</p>
+                                                <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">308 West 46th Street New York, NY 10036</p>
                                                 <p class="event_date">
                                                     <span>
                                                         <span itemprop="startDate" content="2014-07-08T22:00">Jul 8, 2014</span>
@@ -297,7 +297,7 @@
                                                 <span class="date">
                                                     08			<span>Jul</span>
                                                 </span>
-                                                <h2 class="entry-title"><a itemprop="url" href="" title="Comedy Club" rel="bookmark">Comedy Club</a></h2>
+                                                <h2 class="entry-title"><a itemprop="name" href="" title="Comedy Club" getCurrentOrderArr>Comedy Club</a></h2>
                                                 <div class="listing_rating">
                                                     <div class="directory_rating_row">
                                                         <span class="single_rating"> 
@@ -314,7 +314,7 @@
 
                                             <!-- Entry details start -->
                                             <div class="entry-details">
-                                                <p class="address" itemprop="address">266 West 37th Street New York, NY 10018</p>
+                                                <p class="address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">266 West 37th Street New York, NY 10018</p>
                                                 <p class="event_date">
                                                     <span>
                                                         <span itemprop="startDate" content="2014-07-08T15:00">Jul 8, 2014</span>
