--- a/src/app/view/search/search.component.html
+++ b/src/app/view/search/search.component.html
@@ -58,7 +58,7 @@
                                 <div class="col-md-12">
                                   <div class="byline">Published by 
                             <span class="author vcard">
-                                <a class="url fn n"  title="Smith">{{blogs.username}}</a>
+                                <a class="url fn n"  >{{blogs.username}}</a>
                             </span> On 
                             <abbr class="published" title="{{blog.create_date}}">{{blogs.create_date}}</abbr> 
                         </div>  
