--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="IE=9"> <!-- Specially to make clustering work in IE -->
+    <meta http-equiv="X-UA-Compatible" content="IE=9"> <!Specially to make clustering work in IE -->
 
-    <title>Home</title>
+ <!--    <title>Home</title>
     
-</head>
-<body class="wordpress home singular singular-page layout-default tevolution-event-manager event-front-page location_manager mobile-header">
-
+</head> -->
      <ng2-toasty [position]="'top-center'" ></ng2-toasty>
     <div id="container" class="container-wrap">
         <header class="header_container clearfix">
