remove date content

--- a/src/app/view/event/eventlist.component.html
+++ b/src/app/view/event/eventlist.component.html
@@ -81,8 +81,8 @@
                                                          </p>
                                     <p class="event_date">
                                         <span>
-                                            <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_date}}</span>
-                                            To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_date}}</span>
+                                            <span itemprop="startDate">{{events.start_date}}</span>
+                                            To <span itemprop="endDate">{{events.end_date}}</span>
                                         </span>
                                     </p>
                                     <p class="time">
@@ -187,14 +187,14 @@
                                                          </p>
                                                         <p class="event_date">
                                                             <span>
-                                                                <span itemprop="startDate" content="2014-07-08T15:30"> {{events.start_date}}</span>
-                                                                To <span itemprop="endDate" content="2019-07-08T17:30"> {{events.end_date}}</span>
+                                                                <span itemprop="startDate"> {{events.start_date}}</span>
+                                                                To <span itemprop="endDate"> {{events.end_date}}</span>
                                                             </span>
                                                         </p>
                                                         <p class="time">
                                                         <span>
-                                            <span itemprop="startDate" content="2014-07-08T22:00">{{events.start_time}}</span>
-                                            To <span itemprop="endDate" content="2019-07-08T23:30">{{events.end_time}}</span>
+                                            <span itemprop="startDate" >{{events.start_time}}</span>
+                                            To <span itemprop="endDate" >{{events.end_time}}</span>
                                         </span>
                                                            </p><!--googleoff: all-->
                                                           <span *ngIf = "getToken">
